--- a/client/src/index.css
+++ b/client/src/index.css
@@ -92,4 +92,57 @@ body {
   font-family: "Nunito", serif;
 }
 
+/* Uniform, responsive blog post images */
+.blog-image,
+.single-blog-content img {
+  display: block;
+  max-width: 100%;
+  max-height: 400px;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Uniform, responsive blog post image containers */
+.blog-image-container {
+  width: 100%;
+  aspect-ratio: 16/9;
+  max-height: 400px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.blog-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+@media (max-width: 600px) {
+  .blog-image-container {
+    max-height: 220px;
+    aspect-ratio: 16/9;
+  }
+}
+
+/* Responsive, universal blog post content images */
+.single-blog-content img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  max-height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: contain;
+  box-sizing: border-box;
+}
+@media (max-width: 600px) {
+  .single-blog-content img {
+    max-height: 220px;
+  }
+}
+
 
